--- a/index.html
+++ b/index.html
@@ -14,31 +14,38 @@
         <header>
             <div class="top_info">
                 <div id="cookies">
-                    <div class="cookies_info">Ta strona zawiera cookies.</div>
+                    <div class="empty">
+                        <div class="cookies_info">Ta strona zawiera cookies.</div>
+                    </div>
+
                     <div class="buttons">
                         <button class="btn1">Ukryj</button>
                         <button class="btn2">Pokaż</button>
                     </div>
                 </div>
-                <div class="top_sentence">
-                    <h1>Moje Portfolio</h1>
-                </div>
-
-                <div class="photos">
-                    <div class="frame">
-                        <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
-                    </div>
-                    <div class="frame">
-                        <img id="photo2" src="images/b1.jpg" alt="Jesień">
-                    </div>
-                    <div class="frame">
-                        <img id="photo3" src="images/c1.jpg" alt="Tory">
-                    </div>
-                </div>
             </div>
         </header>
 
-        <section>
+        <section id="first">
+            <div class="top_sentence">
+                <h1>Moje Portfolio</h1>
+            </div>
+
+            <div class="photos">
+                <div class="frame">
+                    <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
+                </div>
+                <div class="frame">
+                    <img id="photo2" src="images/b1.jpg" alt="Jesień">
+                </div>
+                <div class="frame">
+                    <img id="photo3" src="images/c1.jpg" alt="Tory">
+                </div>
+            </div>
+        </section>
+
+
+        <section id="second">
             <div>
                 <h2>Prześlij informacje o sobie</h2>
                 <form>
