Done with some bugs

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
         </section>-->
 
-        <section id="third">
-            <div>
+        <section id="second">
+            <div class="info_sentence">
                 <h2>Prześlij do mnie informacje o sobie:</h2>
             </div>
             <div class="email_form">
@@ -129,11 +129,10 @@
         </section>
 
         <footer>
-            <div>Obserwuj mnie na:</div>
+            <div class="bottom_info">Obserwuj mnie na:</div>
             <img src="images/iconmonstr-facebook-6-32.png">
             <img src="images/iconmonstr-twitter-3-32.png">
             <img src="images/iconmonstr-google-plus-1-32.png">
-
         </footer>
 </body>
 <script src="js/cookies.js"></script>
