Updated with checkbox2PHP

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                         <div class="my_form">
                             <div>
                                 <p>Ulubiony gatunek muzyki:</p>
-                                <input type="checkbox" name="music" value="Pop">Pop<br>
-                                <input type="checkbox" name="music" value="Rock">Rock&Roll<br>
-                                <input type="checkbox" name="music" value="Jazz">Jazz<br>
-                                <input type="checkbox" name="music" value="HipHop">Hip Hop<br>
-                                <input type="checkbox" name="music" value="Classic">Klasyczna<br>
-                                <input type="checkbox" name="music" value="Metal">Metal<br><br>
+                                <input type="checkbox" name="music[]" value="Pop">Pop<br>
+                                <input type="checkbox" name="music[]" value="Rock">Rock&Roll<br>
+                                <input type="checkbox" name="music[]" value="Jazz">Jazz<br>
+                                <input type="checkbox" name="music[]" value="HipHop">Hip Hop<br>
+                                <input type="checkbox" name="music[]" value="Classic">Klasyczna<br>
+                                <input type="checkbox" name="music[]" value="Metal">Metal<br><br>
                                 <p>Gdzie spędzałeś/aś Sylwestra?:</p>
                                 <input type="radio" name="sylwester" value="house" checked>Na domówce<br>
                                 <input type="radio" name="sylwester" value="concert">Na koncercie<br>
