--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <title>Portfolio</title>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -37,44 +39,47 @@
             <div class="top_sentence">
                 <h1>Moje Portfolio</h1>
             </div>
+            <div class="container-fluid">
+                <div class="row justify-content-center">
 
-            <div class="photos">
-                <div class="my_box">
-                    <div class="frame">
-                        <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
+                    <div class="col-xs-4 my_box">
+                        <div class="frame">
+                            <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
+                        </div>
+                        <div class="under_photo">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
                     </div>
-                    <div class="under_photo">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
+
+                    <div class="col-xs-4 my_box">
+                        <div class="frame">
+                            <img id="photo2" src="images/b1.jpg" alt="Jesień">
+                        </div>
+                        <div class="under_photo">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
                     </div>
+
+
+                    <div class="col-xs-4 my_box">
+                        <div class="frame">
+                            <img id="photo3" src="images/c1.jpg" alt="Tory">
+                        </div>
+                        <div class="under_photo">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="my_box">
-                    <div class="frame">
-                        <img id="photo2" src="images/b1.jpg" alt="Jesień">
-                    </div>
-                    <div class="under_photo">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                    </div>
-                </div>
-
-
-                <div class="my_box">
-                    <div class="frame">
-                        <img id="photo3" src="images/c1.jpg" alt="Tory">
-                    </div>
-                    <div class="under_photo">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                    </div>
-                </div>
-
             </div>
         </section>
 
@@ -92,40 +97,41 @@
             </div>
             <div class="email_form">
                     <form method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']); ?>">
-                        <div class="my_form">
-                            <div>
-                                <p>Ulubiony gatunek muzyki:</p>
-                                <input type="checkbox" name="music[]" value="Pop">Pop<br>
-                                <input type="checkbox" name="music[]" value="Rock">Rock&Roll<br>
-                                <input type="checkbox" name="music[]" value="Jazz">Jazz<br>
-                                <input type="checkbox" name="music[]" value="HipHop">Hip Hop<br>
-                                <input type="checkbox" name="music[]" value="Classic">Klasyczna<br>
-                                <input type="checkbox" name="music[]" value="Metal">Metal<br><br>
-                                <p>Gdzie spędzałeś/aś Sylwestra?:</p>
-                                <input type="radio" name="sylwester" value="house" checked>Na domówce<br>
-                                <input type="radio" name="sylwester" value="concert">Na koncercie<br>
-                                <input type="radio" name="sylwester" value="club">W klubie<br>
-                                <p>Czy odpalałeś/aś ognie sztuczne?:</p>
-                                <select name="fireworks">
-                                    <option value="yes">Tak</option>
-                                    <option value="no">Nie</option>
-                                </select><br><br>
+                        <div class="container my_form">
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <p>Ulubiony gatunek muzyki:</p>
+                                    <input type="checkbox" name="music[]" value="Pop">Pop<br>
+                                    <input type="checkbox" name="music[]" value="Rock">Rock&Roll<br>
+                                    <input type="checkbox" name="music[]" value="Jazz">Jazz<br>
+                                    <input type="checkbox" name="music[]" value="HipHop">Hip Hop<br>
+                                    <input type="checkbox" name="music[]" value="Classic">Klasyczna<br>
+                                    <input type="checkbox" name="music[]" value="Metal">Metal<br><br>
+                                    <p>Gdzie spędzałeś/aś Sylwestra?:</p>
+                                    <input type="radio" name="sylwester" value="house" checked>Na domówce<br>
+                                    <input type="radio" name="sylwester" value="concert">Na koncercie<br>
+                                    <input type="radio" name="sylwester" value="club">W klubie<br>
+                                    <p>Czy odpalałeś/aś ognie sztuczne?:</p>
+                                    <select name="fireworks">
+                                        <option value="yes">Tak</option>
+                                        <option value="no">Nie</option>
+                                    </select><br><br>
+                                </div>
+
+                                <div class="col-xs-6">
+                                    Numer telefonu:<br>
+                                    <input type="text" name="full_name" value="Telefon">
+                                    <br>
+                                    Adres e-mail:<br>
+                                    <input type="text" name="email" value="E-mail">
+                                    <br>
+                                    Treść wiadomości:<br>
+                                    <textarea name="message" style="width:200px; height:200px">Wiadomość</textarea>
+                                    <br><br>
+                                    <input type="submit" name="submit" value="Wyślij">
+                                </div>
                             </div>
 
-                            <div>
-                                Imię i Nazwisko:<br>
-                                <input type="text" name="full_name" value="Imię i Nazwisko">
-                                <br>
-                                Adres e-mail:<br>
-                                <input type="text" name="email" value="E-mail">
-                                <br>
-                                Treść wiadomości:<br>
-                                <textarea name="message" style="width:200px; height:200px">Wiadomość</textarea>
-                                <br><br>
-                            </div>
-                            <div>
-                                <input type="submit" name="submit" value="Wyślij">
-                            </div>
                         </div>
 
                     </form>
@@ -133,17 +139,13 @@
 
         </section>
 
-        <footer class="d-flex flex-row">
+        <footer>
             <div class="container">
-                <div class="row">
-                    <div class="col-xs-2"></div>
-                    <div class="bottom_info">
-                        <div class="col-xs-2">Obserwuj mnie na:</div>
-                    </div>
-                    <div class="col-xs-2"><img src="images/iconmonstr-facebook-6-32.png"></div>
-                    <div class="col-xs-2"><img src="images/iconmonstr-twitter-3-32.png"></div>
-                    <div class="col-xs-2"><img src="images/iconmonstr-google-plus-1-32.png"></div>
-                    <div class="col-xs-2"></div>
+                <div class="row bottom_row">
+                    <div class="col-xs-3 bottom_info">Obserwuj mnie na:</div>
+                    <div class="col-xs-3"><img src="images/iconmonstr-facebook-6-32.png"></div>
+                    <div class="col-xs-3"><img src="images/iconmonstr-twitter-3-32.png"></div>
+                    <div class="col-xs-3"><img src="images/iconmonstr-google-plus-1-32.png"></div>
                 </div>
             </div>
         </footer>
