PHP validation done

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <h2>Prześlij do mnie informacje o sobie:</h2>
             </div>
             <div class="email_form">
-                    <form method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']); ?>">
+                    <form method="post" action="php/action_page.php">
                         <div class="container my_form">
                             <div class="row">
                                 <div class="col-xs-6">
@@ -120,7 +120,7 @@
 
                                 <div class="col-xs-6">
                                     Numer telefonu:<br>
-                                    <input type="text" name="full_name" value="Telefon">
+                                    <input type="text" name="telephone" value="Telefon">
                                     <br>
                                     Adres e-mail:<br>
                                     <input type="text" name="email" value="E-mail">
