--- a/index.html
+++ b/index.html
@@ -152,4 +152,7 @@
 </body>
 <script src="js/cookies.js"></script>
 <script src="js/images2.js"></script>
+<!--<script>
+    console.log($(window).resize())
+</script>-->
 </html>
