Done with Less and Bootstrap

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
 
-                    <div class="col-xs-4 my_box">
+                    <div class="col-4 mybox">
                         <div class="frame">
                             <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
                         </div>
@@ -54,7 +54,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-4 my_box">
+                    <div class="col-4 mybox">
                         <div class="frame">
                             <img id="photo2" src="images/b1.jpg" alt="Jesień">
                         </div>
@@ -67,7 +67,7 @@
                     </div>
 
 
-                    <div class="col-xs-4 my_box">
+                    <div class="col-4 mybox">
                         <div class="frame">
                             <img id="photo3" src="images/c1.jpg" alt="Tory">
                         </div>
@@ -100,7 +100,13 @@
                         <div class="container my_form">
                             <div class="row">
                                 <div class="col-xs-6">
-                                    <p>Ulubiony gatunek muzyki:</p>
+                                    Imię i nazwisko:<br>
+                                    <input type="text" name="username">
+                                    <br>
+                                    Adres:<br>
+                                    <input type="text" name="address">
+                                    <br>
+                                    <!--<p>Ulubiony gatunek muzyki:</p>
                                     <input type="checkbox" name="music[]" value="Pop">Pop<br>
                                     <input type="checkbox" name="music[]" value="Rock">Rock&Roll<br>
                                     <input type="checkbox" name="music[]" value="Jazz">Jazz<br>
@@ -115,7 +121,7 @@
                                     <select name="fireworks">
                                         <option value="yes">Tak</option>
                                         <option value="no">Nie</option>
-                                    </select><br><br>
+                                    </select><br><br>-->
                                 </div>
 
                                 <div class="col-xs-6">
@@ -141,7 +147,7 @@
 
         <footer>
             <div class="container">
-                <div class="row bottom_row">
+                <div class="row justify-content-around">
                     <div class="col-xs-3 bottom_info">Obserwuj mnie na:</div>
                     <div class="col-xs-3"><img src="images/iconmonstr-facebook-6-32.png"></div>
                     <div class="col-xs-3"><img src="images/iconmonstr-twitter-3-32.png"></div>
