For first day in AMU

--- a/index.html
+++ b/index.html
@@ -100,8 +100,14 @@
                         <div class="container my_form">
                             <div class="row">
                                 <div class="col-xs-6">
-                                    Imię i nazwisko:<br>
-                                    <input type="text" name="username">
+                                    Imię:<br>
+                                    <input type="text" name="first_name">
+                                    <br>
+                                    Nazwisko:<br>
+                                    <input type="text" name="last_name">
+                                    <br>
+                                    Miasto:<br>
+                                    <input type="text" name="city">
                                     <br>
                                     Adres:<br>
                                     <input type="text" name="address">
