Adding records to database

--- a/index.html
+++ b/index.html
@@ -42,40 +42,46 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
 
-                    <div class="col-4 mybox">
-                        <div class="frame">
-                            <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
-                        </div>
-                        <div class="under_photo">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-4 mybox">
-                        <div class="frame">
-                            <img id="photo2" src="images/b1.jpg" alt="Jesień">
-                        </div>
-                        <div class="under_photo">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
+                    <div class="col-4">
+                        <div class="mybox">
+                            <div class="frame">
+                                <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
+                            </div>
+                            <div class="under_photo">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                            </div>
                         </div>
                     </div>
 
-
-                    <div class="col-4 mybox">
-                        <div class="frame">
-                            <img id="photo3" src="images/c1.jpg" alt="Tory">
+                    <div class="col-4">
+                        <div class="mybox">
+                            <div class="frame">
+                                <img id="photo2" src="images/b1.jpg" alt="Jesień">
+                            </div>
+                            <div class="under_photo">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                            </div>
                         </div>
-                        <div class="under_photo">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
+                    </div>
+
+
+                    <div class="col-4">
+                        <div class="mybox">
+                            <div class="frame">
+                                <img id="photo3" src="images/c1.jpg" alt="Tory">
+                            </div>
+                            <div class="under_photo">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                            </div>
                         </div>
                     </div>
 
@@ -101,16 +107,16 @@
                             <div class="row">
                                 <div class="col-xs-6">
                                     Imię:<br>
-                                    <input type="text" name="first_name">
+                                    <input type="text" name="f_name">
                                     <br>
                                     Nazwisko:<br>
-                                    <input type="text" name="last_name">
+                                    <input type="text" name="l_name">
                                     <br>
                                     Miasto:<br>
                                     <input type="text" name="city">
                                     <br>
-                                    Adres:<br>
-                                    <input type="text" name="address">
+                                    Ulica:<br>
+                                    <input type="text" name="street">
                                     <br>
                                     <!--<p>Ulubiony gatunek muzyki:</p>
                                     <input type="checkbox" name="music[]" value="Pop">Pop<br>
