--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <h1>Moje Portfolio</h1>
             </div>
             <div class="container-fluid">
-                <div class="row justify-content-center">
+                <div class="row">
 
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <div class="mybox">
                             <div class="frame">
-                                <img id="photo1" src="images/a1.jpeg" alt="Wodospad">
+                                <img id="photo1" src="images/a.jpeg" alt="Wodospad">
                             </div>
                             <div class="under_photo">
                                 <p>
@@ -56,10 +56,10 @@
                         </div>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <div class="mybox">
                             <div class="frame">
-                                <img id="photo2" src="images/b1.jpg" alt="Jesień">
+                                <img id="photo2" src="images/b.jpg" alt="Jesień">
                             </div>
                             <div class="under_photo">
                                 <p>
@@ -71,10 +71,10 @@
                     </div>
 
 
-                    <div class="col-4">
+                    <div class="col-lg-4">
                         <div class="mybox">
                             <div class="frame">
-                                <img id="photo3" src="images/c1.jpg" alt="Tory">
+                                <img id="photo3" src="images/c.jpg" alt="Tory">
                             </div>
                             <div class="under_photo">
                                 <p>
@@ -84,7 +84,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
@@ -103,7 +102,7 @@
             </div>
             <div class="email_form">
                     <form method="post" action="php/action_page.php">
-                        <div class="container my_form">
+                        <div class="container">
                             <div class="row">
                                 <div class="col-xs-6">
                                     Imię:<br>
@@ -160,16 +159,16 @@
         <footer>
             <div class="container">
                 <div class="row justify-content-around">
-                    <div class="col-xs-3 bottom_info">Obserwuj mnie na:</div>
-                    <div class="col-xs-3"><img src="images/iconmonstr-facebook-6-32.png"></div>
-                    <div class="col-xs-3"><img src="images/iconmonstr-twitter-3-32.png"></div>
-                    <div class="col-xs-3"><img src="images/iconmonstr-google-plus-1-32.png"></div>
+                    <div class="col-lg-3 bottom_info">Obserwuj mnie na:</div>
+                    <div class="col-lg-3"><img src="images/iconmonstr-facebook-6-32.png"></div>
+                    <div class="col-lg-3"><img src="images/iconmonstr-twitter-3-32.png"></div>
+                    <div class="col-lg-3"><img src="images/iconmonstr-google-plus-1-32.png"></div>
                 </div>
             </div>
         </footer>
 </body>
 <script src="js/cookies.js"></script>
-<script src="js/images2.js"></script>
+<script src="js/images.js"></script>
 <!--<script>
     console.log($(window).resize())
 </script>-->
